src/objects/CM_Network_Codes__c.object
<CustomObject>
    <fields>
        <fullName>Clinic_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clinic Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facility_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facility Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Government_Network_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Government_Network_Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Network_Code__c</fullName>
        <description>The short code value for the network code</description>
        <label>Network Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Network_Description__c</fullName>
        <description>The long description of the network code</description>
        <label>Network Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physician Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Plan_Id__c</fullName>
        <description>This field notes the individual state idenifier</description>
        <label>Plan Id</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Network Codes</label>
    <nameField>
        <label>Network Codes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>